close screen fix
additional edits and install of mix it up

--- a/css/component.css
+++ b/css/component.css
@@ -533,6 +533,7 @@ section.bl-expand .bl-icon-close {
 	-webkit-transition: opacity 0.3s linear 0.5s;
 	-moz-transition: opacity 0.3s linear 0.5s;
 	transition: opacity 0.3s linear 0.5s;
+	position: fixed;
 }
 
 /* --------------------------------------------------------	*/
