--- a/css/component.css
+++ b/css/component.css
@@ -208,10 +208,10 @@ div.bl-panel-items > div > div {
 	opacity: 0;
 	pointer-events: none;
 	position: absolute;
-	top: 60px;
+	top: 20px;
 	left: 30px;
 	right: 30px;
-	bottom: 30px;
+	bottom: 50px;
 	padding: 0 20px;
 	overflow: hidden;
 	overflow-y: auto;
@@ -459,8 +459,8 @@ div.bl-panel-items > div.bl-hide-current-work {
 }
 
 .bl-main > section.bl-expand {
-	width: 100%;
-	height: 100%;
+	width: 1000%;
+	height: 93.5%;
 	top: 0;
 	left: 0;
 }
@@ -534,6 +534,23 @@ section.bl-expand .bl-icon-close {
 	-moz-transition: opacity 0.3s linear 0.5s;
 	transition: opacity 0.3s linear 0.5s;
 	position: fixed;
+}
+
+.wrapper {
+min-height: 100%;
+height: auto !important;
+height: 100%;
+margin: 0 auto -em;
+}
+
+.footer, .push {
+height: em;
+background: rgba(254,181,255,0.4);
+padding-bottom: 2px;
+position: fixed;
+bottom: -75px;
+left: 0%;
+width: 100%;
 }
 
 /* --------------------------------------------------------	*/
