--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -99,8 +99,8 @@ sub {
 }
 
 img {
-  width: 300px;
-  height: 150px;
+  width: 260px;
+  height: 122px;
   max-width: 100%;
   vertical-align: middle;
   border: 0;
@@ -760,7 +760,7 @@ h6 small {
 h1,
 h2,
 h3 {
-  line-height: 40px;
+  line-height: 30px;
 }
 
 h1 {
@@ -812,7 +812,7 @@ h4 small {
 ul,
 ol {
   padding: 0;
-  margin: 0 0 10px 25px;
+  margin: 0 0 10px 9%;
 }
 
 ul ul,
@@ -3304,7 +3304,7 @@ button.close {
 
 .btn-small {
   padding: 2px 10px;
-  font-size: 11.9px;
+  font-size: 20px;
   -webkit-border-radius: 3px;
      -moz-border-radius: 3px;
           border-radius: 3px;
@@ -6148,6 +6148,10 @@ a.badge:focus {
 
 .pull-left {
   float: left;
+}
+
+.pull-center{
+  float: center;
 }
 
 .hide {
