--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -229,8 +229,8 @@
        -moz-box-sizing: border-box;
             box-sizing: border-box;
   }
-  .row-fluid [class*="span"]:first-child {
-    margin-left: 0;
+  .row-fluid [class*="span"]:nth-child(4n+1) {
+    margin-left: 0px;
   }
   .row-fluid .controls-row [class*="span"] + [class*="span"] {
     margin-left: 2.564102564102564%;
@@ -267,10 +267,19 @@
     width: 40.17094017094017%;
     *width: 40.11774868157847%;
   }
+
+
+  .row-fluid .span4 {
+    width: 23%;
+    *width: 23%;
+  }
+
+  /*!
   .row-fluid .span4 {
     width: 31.623931623931625%;
     *width: 31.570740134569924%;
   }
+  */
   .row-fluid .span3 {
     width: 23.076923076923077%;
     *width: 23.023731587561375%;
