--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ html{
 body{
 	color:#fcfcfc;
 	font:14px/1.3 'Segoe UI',Arial, sans-serif;
-	min-height: 930px;
+	min-height: 100%;
 	background:url('../img/bg_center.jpg') center 240px no-repeat;
 }
 
