--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5791,9 +5791,14 @@ a.badge:focus {
      -moz-border-radius: 4px;
           border-radius: 4px;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#fff9f9f9', GradientType=0);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.1);
+     -moz-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.1);
+
+
+  /*-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
      -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-          box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);*/
 }
 
 .progress .bar {
