--- a/css/component.css
+++ b/css/component.css
@@ -248,6 +248,14 @@ div.bl-panel-items > div > div {
 	margin: 0 0 0px 0;
 	color: #2C2C2C;
 }
+.bl-content h6 {
+	font-size: 2.3em;
+	font-weight: 300;
+	margin: 0 0 20px 0;
+	text-align: center;
+	color: #626d14;
+	margin-bottom: 25px;
+}
 .bl-content article {
 	padding: 0px 40px 20px 0px;
 }
