--- a/css/component.css
+++ b/css/component.css
@@ -229,7 +229,7 @@ div.bl-panel-items > div > div {
 
 .bl-content h4 {
 	margin: 0 auto;
-	padding-bottom: 15px;
+	padding-bottom: .5px;
 	font-size: 1.3em;
 	line-height: 1.8;
 	color:#2C2C2C;
